--- a/oh.html
+++ b/oh.html
@@ -1,5 +1,5 @@
 <html>
 <body style="background-color:#ff7300;">
   <img src="https://pics.onsizzle.com/angery-doggo-2788195.png" />
-  <a href="https://firelevelone.github.io/angerydoggo-project/hentai.html">
+  <a href="https://firelevelone.github.io/angerydoggo-project/hentai.html"> flash game </a>
   <html />
