--- a/hentai.html
+++ b/hentai.html
@@ -1,1 +1,1 @@
-<a href="http://uploads.ungrounded.net/apiassets/sandbox.swf" />
+<a href="http://uploads.ungrounded.net/apiassets/sandbox.swf">download</a>
