--- a/oh.html
+++ b/oh.html
@@ -2,6 +2,11 @@
 <body style="background-color:#ff7300;">
   <img src="https://pics.onsizzle.com/angery-doggo-2788195.png" />
    
+  <div></div>
+  
+  <h2>Soft Skills Project</h2>
+  
+  <a href="https://firelevelone.github.io/angerydoggo-project/ok.html">Communication Skills</a>
   <html />
   
 
