--- a/ok.html
+++ b/ok.html
@@ -2,7 +2,7 @@
 <body style="background-color:#ff7300;">
  <a href=“firelevelone.github.io/angerydoggo-project/oh.html”>Back</a>
    <h1>Communication</h1>
-    <img src=“http://i.imgur.com/1zreqpJ” />
+    <img src=“http://i.imgur.com/1zreqpJ.png” />
 
 <div></div>
 
