--- a/ok.html
+++ b/ok.html
@@ -2,7 +2,7 @@
 <body style="background-color:#ff7300;">
  
    <h1>Communication</h1>
-    <img src=“http://i.imgur.com/1zreqpJ.png” />
+    <img src=“http://i.imgur.com/1zreqpJ.png” width="1334" height="750" />
 
 <div></div>
 
