--- a/ok.html
+++ b/ok.html
@@ -1,8 +1,8 @@
 <html>
 <body style="background-color:#ff7300;">
- 
+ <a href="https://firelevelone.github.io/angerydoggo-project/oh.html">Back</a>
    <h1>Communication</h1>
-    <img src=“http://i.imgur.com/1zreqpJ.png” width="1334" height="750" />
+    <img src=“http://i.imgur.com/1zreqpJ.png”/>
 
 <div></div>
 
