--- a/ok.html
+++ b/ok.html
@@ -2,8 +2,7 @@
 <body style="background-color:#ff7300;">
  <a href="https://firelevelone.github.io/angerydoggo-project/oh.html">Back</a>
    <h1>Communication</h1>
-    <img src="https://firelevelone.github.io/angerydoggo-project/Jay's pics/2 males communicating.png" />
- <p>didit work?</p>
+   <img class="alignnone size-full wp-image-156" src="https://jamiearmstrongbhs.files.wordpress.com/2017/01/2-males-communicating.png" alt="2-males-communicating" width="478" height="318" />
 <div></div>
 
  <p>Communication skills are very important - they are how we give and receive information and convey our ideas and opinions with those around us  </p>
