--- a/oh.html
+++ b/oh.html
@@ -7,6 +7,6 @@
   <h2>Soft Skills Project</h2>
   
   <a href="https://firelevelone.github.io/angerydoggo-project/ok.html">Communication Skills</a>
-  <html />
-  
 
+<a href="https://firelevelone.github.io/angerydoggo-project/attitude yeet">attitude and enthusiasm</a>
+    <html />
