--- a/oh.html
+++ b/oh.html
@@ -7,6 +7,12 @@
   <h2>Soft Skills Project</h2>
   
   <a href="https://firelevelone.github.io/angerydoggo-project/ok.html">Communication Skills</a>
-
+  
+ <div></div> 
+  
 <a href="https://firelevelone.github.io/angerydoggo-project/attitude yeet">attitude and enthusiasm</a>
     <html />
+  
+  <div></div>
+  
+  <a href="https://firelevelone.github.io/angerydoggo-project/Teamwork.html">Teamwork</a>
