--- a/attitude yeet.html
+++ b/attitude yeet.html
@@ -1,12 +1,10 @@
 <html>
 <h1>Attitude and Enthusiasm</h1>
-<span>the way your employer perceives you greatly persuades the way they treat you</span>
+<span>the way your employer perceives you greatly persuades the what they think about you</span>
+<br>
+<p></p>
+<br>
 
 <img class="alignnone size-full wp-image-156" src="https://firelevelone.github.io/angerydoggo-project/Jamie's pics/Untitled.png" alt="whos-who" width="303" height="170" />
 <p style="text-align: center;"> <span>Would you rather hire the punk on the left or the snazzy gentleman on the right?</span> </p>
-<br>
-<span>
-
-
-
-</html>
+<span>how you 
