--- a/ok.html
+++ b/ok.html
@@ -2,8 +2,7 @@
 <body style="background-color:#ff7300;">
  <a href="https://firelevelone.github.io/angerydoggo-project/oh.html">Back</a>
    <h1>Communication</h1>
-   <img class="alignnone size-full wp-image-156" src="https://firelevelone.github.io/angerydoggo-project/Jay's pic/2 males communicating.png
-" alt="2-males-communicating" width="478" height="318" />
+   <img class="alignnone size-full wp-image-123" src="https://tekekblog.files.wordpress.com/2017/01/6a00e54ee3905b883301b8d0d56577970.png?w=414" alt="6a00e54ee3905b883301b8d0d56577970.jpg" width="414" height="276" />
 <div></div>
 
  <p>Communication skills are very important - they are how we give and receive information and convey our ideas and opinions with those around us  </p>
