--- a/attitude yeet.html
+++ b/attitude yeet.html
@@ -1,10 +1,18 @@
 <html>
 <h1>Attitude and Enthusiasm</h1>
+<span>Your interview mostly determines weather you get the job or not.</span>
 <span>the way your employer perceives you greatly persuades the what they think about you</span>
 <br>
 <p></p>
 <br>
-
+<strong>Attire</strong>
 <img class="alignnone size-full wp-image-156" src="https://firelevelone.github.io/angerydoggo-project/Jamie's pics/Untitled.png" alt="whos-who" width="303" height="170" />
 <p style="text-align: center;"> <span>Would you rather hire the punk on the left or the snazzy gentleman on the right?</span> </p>
-<span>how you 
+<span>If you care to dress formally you look more professional and trustworthy.</span>
+<span>wearing sunglasses, chewing gum, displaying poor posture, disorganized, late, etc is generally bad for a first impression</span>
+<br>
+<p></p>
+<br>
+<strong>Verbal and Non-Verbal Communication</strong>
+<p style="text-align: center;">how you act obviously shows how you feel about the job</p>
+<span>
