--- a/Teamwork.html
+++ b/Teamwork.html
@@ -21,7 +21,7 @@
    <br>
   <h2>Well, How do I do It?</h2>
    <br>
-    <p>Think of teamwork this way. Imagine your project as being a puzzle with thousands of tiny pieces. Do you think it would take longer for one person to find each piece one-by-one, or to have, let’s say five, people working together to find five pieces at a time. Theoretically, the team of five should be able to finish the puzzle way faster than one person. However, if they all bump heads, the project could end up taking longer than even a single person working.</p>
+    <p>In its essence, teamwork is about listening to others (communication) and respecting the way they work as opposed to the way you do. By doing this as well as taking responsibility for your part of the work, you are working as part of the team.</p>
  
 
 
