--- a/attitude yeet.html
+++ b/attitude yeet.html
@@ -1,4 +1,5 @@
 <html>
+<body style="background-color:#ff7300;">
 <h1>Attitude and Enthusiasm</h1>
 <span>Your interview mostly determines weather you get the job or not.</span>
 <span>the way your employer perceives you greatly persuades the what they think about you</span>
@@ -15,3 +16,5 @@
 <br>
 <strong>Verbal and Non-Verbal Communication</strong>
 <p style="text-align: center;">how you act obviously shows how you feel about the job</p>
+<span>If you look at a situation with a positive outlook to improve it your more trustworthy appearing.</span>
+<span>Another thing is non-verbal communication. Its not a good idea to sloutch over and have a bored look on your face</span>
