--- a/oh.html
+++ b/oh.html
@@ -10,7 +10,7 @@
   
  <div></div> 
   
-<a href="https://firelevelone.github.io/angerydoggo-project/attitude yeet">attitude and enthusiasm</a>
+<a href="https://firelevelone.github.io/angerydoggo-project/attitude yeet">Attitude and Enthusiasm</a>
     <html />
   
   <div></div>
