--- a/Teamwork.html
+++ b/Teamwork.html
@@ -1,5 +1,5 @@
 <html>
- <body style="background-color:#ff7300;">
+ <body style="background-color:#c0392b;">
   <a href="https://firelevelone.github.io/angerydoggo-project/oh.html">Back</a>
    <h1>Teamwork</h1>
     <img class="alignnone  wp-image-120" src="https://tekekblog.files.wordpress.com/2017/01/team-work.png" alt="team-work" width="321" height="336" />
