--- a/attitude yeet.html
+++ b/attitude yeet.html
@@ -7,7 +7,7 @@
 <p></p>
 <br>
 <strong>Attire</strong>
-<img class="alignnone size-full wp-image-156" src="https://firelevelone.github.io/angerydoggo-project/Jamie's pics/Untitled.png" alt="whos-who" width="303" height="170" />
+<center> <img class="alignnone size-full wp-image-156" src="https://firelevelone.github.io/angerydoggo-project/Jamie's pics/Untitled.png" alt="whos-who" width="303" height="170" /> </center>
 <p style="text-align: center;"> <span>Would you rather hire the punk on the left or the snazzy gentleman on the right?</span> </p>
 <span>If you care to dress formally you look more professional and trustworthy.</span>
 <span>wearing sunglasses, chewing gum, displaying poor posture, disorganized, late, etc is generally bad for a first impression</span>
