--- a/ok.html
+++ b/ok.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color:#ff7300;">
+<body style="background-color:#9b59b6;">
  <a href="https://firelevelone.github.io/angerydoggo-project/oh.html">Back</a>
    <h1>Communication</h1>
    <img class="alignnone size-full wp-image-123" src="https://tekekblog.files.wordpress.com/2017/01/6a00e54ee3905b883301b8d0d56577970.png?w=414" alt="6a00e54ee3905b883301b8d0d56577970.jpg" width="414" height="276" />
