--- a/attitude yeet.html
+++ b/attitude yeet.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color:#ff7300;">
+<body style="background-color:#2980b9;">
 <h1>Attitude and Enthusiasm</h1>
 <span>Your interview mostly determines weather you get the job or not.</span>
 <span>the way your employer perceives you greatly persuades the what they think about you</span>
