--- a/oh.html
+++ b/oh.html
@@ -16,3 +16,9 @@
   <div></div>
   
   <a href="https://firelevelone.github.io/angerydoggo-project/Teamwork.html">Teamwork</a>
+  
+  <div></div>
+  
+  <a href="https://firelevelone.github.io/angerydoggo-project/Professionalism.html">Professionalism</a>
+  
+  <div></div>
