--- a/Professionalism.html
+++ b/Professionalism.html
@@ -1,4 +1,18 @@
 <html>
  <body style="background-color:#27ae60;">
   <a href="https://firelevelone.github.io/angerydoggo-project/oh.html">Back</a>
+   <h1>Professionalism</h1>
+    <img class="alignnone size-full wp-image-125" src="https://tekekblog.files.wordpress.com/2017/01/71399dc867d08398b8822ba826c24fdf.png" alt="71399dc867d08398b8822ba826c24fdf" width="314" height="253" />
+     <br>
+  <h2>What is Professionalism?</h2>
    <br>
+  <p> Professionalism is to conduct or to present oneself in a clean and proper manner and to ensure that your personal life is not involved in your work life 
+   <br>
+  <h2>Why is it Important?</h2> 
+   <br>
+  <p>If you go to an interview and wear ratty clothes or have tattoos all over your body, your potential employer will probably assume that you are a punk or some sort of drug addict due to your lack of professionalism. In the same way, if you gossip about your manager or other co-workers all of the time, you will develop a bad reputation and when your boss needs to lay someone off, it may very well be you.
+   <br>
+  <h2>How do I act professionally?</h2>
+   <br>
+  <p>First, think of any ways to eliminate potential sterotyping of yourself, such as covering up tattoos with a long sleeve shirt or pants, or getting a sharp new haircut. Then, to act professionally in the workplace, you want to try to eliminate traces of personal life in your work life. If, lets say, you were to break up with your boyfriend/girlfriend before work, you cannot stop your work because you are sad and crying. I know this sounds harsh but in reality, a business does not stop because you have relationship problems. Therefore, you have to do your job and leave all traces of your problem at home.
+   
