--- a/ok.html
+++ b/ok.html
@@ -20,15 +20,15 @@
   <li>visual (signs, symbols, and pictures)</li>
 
   <div></div>
-  
+  <h2>Why is Communication Important?</h2>
    <p>It is important to develop a variety of skills for both communicating to others and learning how to interpret the information received from others. Knowing our audience and understanding how they need to receive information is equally important as knowing ourselves.</p>
   <br>
+   <p>To an employer, good communication skills are essential. In fact, employers consistently rank good communication skills at the top of the list for potential employees.</p>
+  <br>
   
-  <p>To an employer, good communication skills are essential. In fact, employers consistently rank good communication skills at the top of the list for potential employees.</p>
+  <h2>How can I Have Good Communication?</h2>
+  <p>During an interview, for example, employers are impressed by a job candidate who answers questions with more than one-word answers (such as yeah...nah...dunno), demonstrates that he or she is listening, and shares information and ideas (by asking questions for clarification and/or follow-up). The interview can be an indication to employers of how the candidate or employee will interact with supervisors, co-workers, and customers or resolve conflicts when they arise. Non-verbal communication is also critical in an interview. Employers expect good eye contact, good posture, and “active” listening.</p>
  <br>
   
-  <p>During an interview, for example, employers are impressed by a job candidate who answers questions with more than one-word answers (such as yeah...nah...dunno), demonstrates that he or she is listening, and shares information and ideas (by asking questions for clari cation and/or follow-up). The interview can be an indication to employers of how the candidate or employee will interact with supervisors, co-workers, and customers or resolve conflicts when they arise. Remember, non-verbal communication is also critical in an interview. Employers expect good eye contact, good posture, and “active” listening.</p>
- <br>
-  
-  <p>One of the challenges in the workplace is learning the speci c communication styles of others and how and when to share your ideas or concerns. Though some supervisors may speci cally ask for your opinion, others may assume if there is something important they need to know, you will bring it to their attention – or if there is something you are unsure about, you will ask. Knowing how to listen carefully and when to ask for help is important. If an employee and a supervisor learn to communicate well (in whatever method that works), there is a greater likelihood of job retention and promotion.</p>
- <br>
+ 
+
