--- a/oh.html
+++ b/oh.html
@@ -10,8 +10,11 @@
   
  <div></div> 
   
-<a href="https://firelevelone.github.io/angerydoggo-project/attitude yeet">Attitude and Enthusiasm</a>
-    <html />
+<a href="https://firelevelone.github.io/angerydoggo-project/attitude yeet.html">Attitude and Enthusiasm</a>
+  
+  <div></div>
+  
+  <a href="https://firelevelone.github.io/angerydoggo-project/nutworking.html">Networking</a>
   
   <div></div>
   
@@ -22,3 +25,5 @@
   <a href="https://firelevelone.github.io/angerydoggo-project/Professionalism.html">Professionalism</a>
   
   <div></div>
+    
+  <html />
