--- a/nutworking.html
+++ b/nutworking.html
@@ -1,4 +1,6 @@
 <html>
+<body style="background-color:#ffff00;">
+  <a href="https://firelevelone.github.io/angerydoggo-project/oh.html">Back</a>
 <strong> <h1>Networking</h1> </strong>
 <strong>It's not what you know. It's who you know.</strong>
 <br>
@@ -13,3 +15,4 @@
 <p></p>
 <br>
 <span>imagine if you were an employer short on staff, and you had tons of application flowing in daily. When you were scamming through the hundreds of them you remember one of your inferiors tell you to hire Bob "hes a good man" so instead of hiring the adverage Joe wouldn't you hire Bob?</span>
+</html>
