--- a/oh.html
+++ b/oh.html
@@ -18,6 +18,10 @@
   
   <div></div>
   
+  <a href="https://firelevelone.github.io/angerydoggo-project/Nutworking.html">Networking</a>
+  
+  <div></div>
+  
   <a href="https://firelevelone.github.io/angerydoggo-project/Teamwork.html">Teamwork</a>
   
   <div></div>
