--- a/oh.html
+++ b/oh.html
@@ -18,7 +18,7 @@
   
   <div></div>
   
-  <a href="https://firelevelone.github.io/angerydoggo-project/Nutworking.html">Networking</a>
+  <a href="https://firelevelone.github.io/angerydoggo-project/baby solving skills.html">Problem Solving Skills</a>
   
   <div></div>
   
