--- a/baby solving skills.html
+++ b/baby solving skills.html
@@ -1,6 +1,7 @@
 <html>
 <body style="background-color:#32f0bd;">
-<strong> <h1>Problem Solving Skills</h1> </strong>
+<a href="https://firelevelone.github.io/angerydoggo-project/oh.html">Back</a>
+  <strong> <h1>Problem Solving Skills</h1> </strong>
 <br>
 <img class="alignnone  wp-image-172" src="https://firelevelone.github.io/angerydoggo-project/Jamie's%20pics/portal.jpg" alt="portal" width="595" height="334" />
 <span style="color:#ff7300;">Image from "Portal 2"</span>
