Update baby solving skills.html

--- a/baby solving skills.html
+++ b/baby solving skills.html
@@ -6,7 +6,7 @@
 <img class="alignnone  wp-image-172" src="https://firelevelone.github.io/angerydoggo-project/Jamie's%20pics/portal.jpg" alt="portal" width="595" height="334" />
 <span style="color:#ff7300;">Image from "Portal 2"</span>
 <br>
-<span>This, out of all things, needs the mosts maturity and common sense to comply</span>
+<span>This, out of all things, needs the mosts maturity and common sense to comply.</span>
 <span>This skill set mostly applies to if and when you are hired. Its probably the most improtant thing to have</span>
 <span>Without it everytime you had a problem youd go and ask the manager on what to do. The manager can only take so much responsiblity and stress before they begin to break down and prove unfunctional.</span>
 <br>
