Update and rename nutworking.html to networking.html

--- a/networking.html
+++ b/networking.html
@@ -8,9 +8,9 @@
 <span>If you know everything in a field but dont try to get to know anyone you probably wont get a job.</span>
 <img src="https://firelevelone.github.io/angerydoggo-project/Jamie's%20pics/trump.jpg" />
 <br>
-<span>If you have someone on the inside and they put in a good word about you that can change the tide of the game</span>
-<span>Without help from someone on the inside your application is just another one of the hundreds flowing in the employers wind.</span>
-<span>When one of your coworkers or anyone you know says they know someone in the field that your trying to get a job in go out of your way to try and contact them and ask them on official terms if they could help you get noticied by an employer your trying to get hired by.</span>
+<span>If you have someone on the inside, and they put in a good word about you that can change the tide of the game.</span>
+<span>Without help from someone on the inside, your application is just another one of the hundreds flowing in the employers wind.</span>
+<span>When one of your coworkers or anyone you know says they know someone in the field that is applying for a job and go out of your way to try and contact them and ask them on official terms if they could help you get noticied by an employer your trying to get hired by.</span>
 <br>
 <p></p>
 <br>
