--- a/networking.html
+++ b/networking.html
@@ -10,9 +10,9 @@
 <br>
 <span>If you have someone on the inside, and they put in a good word about you that can change the tide of the game.</span>
 <span>Without help from someone on the inside, your application is just another one of the hundreds flowing in the employers wind.</span>
-<span>When one of your coworkers or anyone you know says they know someone in the field that is applying for a job and go out of your way to try and contact them and ask them on official terms if they could help you get noticied by an employer your trying to get hired by.</span>
+<span>If one of your friends or someone you know says they know you are in the field that is applying for a job and go out of your way to try and contact them and ask them on official terms if they could help you get noticied by an employer you're trying to get hired by.</span>
 <br>
 <p></p>
 <br>
-<span>imagine if you were an employer short on staff, and you had tons of application flowing in daily. When you were scamming through the hundreds of them you remember one of your inferiors tell you to hire Bob "hes a good man" so instead of hiring the adverage Joe wouldn't you hire Bob?</span>
-</html>
+<span>Imagine if you were an employer short on staff, and you had tons of application flowing in daily. When you were scamming through the hundreds of them you remember one of your inferiors tell you to hire Bob "hes a good man" so instead of hiring the adverage Joe wouldn't you hire Bob?</span>
+  <div></div>
