--- a/oh.html
+++ b/oh.html
@@ -14,7 +14,7 @@
   
   <div></div>
   
-  <a href="https://firelevelone.github.io/angerydoggo-project/nutworking.html">Networking</a>
+  <a href="https://firelevelone.github.io/angerydoggo-project/nutworking.html">Networking.html</a>
   
   <div></div>
   
@@ -29,5 +29,13 @@
   <a href="https://firelevelone.github.io/angerydoggo-project/Professionalism.html">Professionalism</a>
   
   <div></div>
-    
+    <br>
+  <p></p>
+  <br>
+  <p></p>
+  <br>
+  <p></p>
+  <br>
+    <strong>Beta 1.2.1
   <html />
+ 
