--- a/oh.html
+++ b/oh.html
@@ -14,7 +14,7 @@
   
   <div></div>
   
-  <a href="https://firelevelone.github.io/angerydoggo-project/nutworking.html">Networking.html</a>
+  <a href="https://firelevelone.github.io/angerydoggo-project/networking.html">Networking</a>
   
   <div></div>
   
