--- a/networking.html
+++ b/networking.html
@@ -5,12 +5,15 @@
 <strong>It's not what you know. It's who you know.</strong>
 <br>
 <p></p>
-<span>If you know everything in a field but dont try to get to know anyone you probably wont get a job.</span>
+<span>If you know everything in a field, but you don't try to get to know anyone you probably won't get a job.</span>
 <img src="https://firelevelone.github.io/angerydoggo-project/Jamie's%20pics/trump.jpg" />
-<br>
-<span>If you have someone on the inside, and they put in a good word about you that can change the tide of the game.</span>
+  <h2>What is a Network?</h2>
+  <div></div>
+  <p>A network is comprised of all of the people you know and talk to. They can be extremely advantageous if you are applying for a job and someone from your "network" happens to employed by that company.
+  <br>
+<span>If you have someone on the inside of a company, and they put in a good word about you, that can change the tide of the game.</span>
 <span>Without help from someone on the inside, your application is just another one of the hundreds flowing in the employers wind.</span>
-<span>If one of your friends or someone you know says they know you are in the field that is applying for a job and go out of your way to try and contact them and ask them on official terms if they could help you get noticied by an employer you're trying to get hired by.</span>
+<span>If you are applying for a job and someone you know works at that company, then they may be able to talk to the application manager and increase your chances of getting noticed for an interview.</span>
 <br>
 <p></p>
 <br>
