--- a/networking.html
+++ b/networking.html
@@ -5,7 +5,7 @@
 <strong>It's not what you know. It's who you know.</strong>
 <br>
 <p></p>
-<span>If you know everything in a field, but you don't try to get to know anyone you probably won't get a job.</span>
+<span>If you know everything in a field, but you don't try to get to know anyone you probably won't get noticed for a job</span>
 <img src="https://firelevelone.github.io/angerydoggo-project/Jamie's%20pics/trump.jpg" />
   <h2>What is a Network?</h2>
   <div></div>
