--- a/baby solving skills.html
+++ b/baby solving skills.html
@@ -1,23 +1,23 @@
 <html>
-<body style="background-color:#32f0bd;">
-<a href="https://firelevelone.github.io/angerydoggo-project/oh.html">Back</a>
-  <strong> <h1>Problem Solving Skills</h1> </strong>
+ <body style="background-color:#32f0bd;">
+  <a href="https://firelevelone.github.io/angerydoggo-project/oh.html">Back</a>
+   <strong> <h1>Problem Solving Skills</h1> </strong>
 <br>
 <img class="alignnone  wp-image-172" src="https://firelevelone.github.io/angerydoggo-project/Jamie's%20pics/portal.jpg" alt="portal" width="595" height="334" />
-<span style="color:#ff7300;">Image from "Portal 2"</span>
+ <span style="color:#ff7300;">Image from "Portal 2"</span>
 <br>
-  <h2>What are Problem Solving Skills?</h2>
-   <p>They are your ability to figure out what to do when there is a problem or when something needs to get done</p>
-  <br>
-  <h2>Why are they Important?</h2>
+<h2>What are Problem Solving Skills?</h2>
+ <p>They are your ability to figure out what to do when there is a problem or when something needs to get done</p>
+<br>
+ <h2>Why are they Important?</h2>
   <span>This, out of all things, needs the mosts maturity and common sense to comply.</span>
-<span>This skill set mostly applies to if and when you are hired. Its probably the most improtant thing to have in the workplace.</span>
-<span>Without problem solving skills, everytime you had a problem you would go and ask the manager on what to do. The manager can only take so much responsiblity and stress before they begin to break down and prove unfunctional.</span>
+   <span>This skill set mostly applies to if and when you are hired. Its probably the most improtant thing to have in the workplace.</span>
+    <span>Without problem solving skills, everytime you had a problem you would go and ask the manager on what to do. The manager can only take so much responsiblity and stress before they begin to break down and prove unfunctional.</span>
 <br>
-<p></p>
+ <p></p>
 <br>
-<span>How would you like it if you were a manager and you had to tell every worker everything they had to do step-by-step, and after each task they completed they returned to their original spot hunched over with glazed eyes like that of a mindless imbecile.</span>
+ <span>How would you like it if you were a manager and you had to tell every worker everything they had to do step-by-step, and after each task they completed they returned to their original spot hunched over with glazed eyes like that of a mindless imbecile.</span>
 <br>
-<p></p>
-<span>These skills shouldnt be that hard to cover. As most humans aquire these skills through the struggles of their child hood and adolescence.</span>
+ <p></p>
+  <span>These skills are generally picked up through experience and can be applied with just a little bit of effort or even just by having a "problem solving" frame of mind.</span>
 </html>
