--- a/oh.html
+++ b/oh.html
@@ -1,5 +1,10 @@
 <html>
 <body style="background-color:#ff7300;">
+  
+  <marquee behavior="scroll" direction="left">AngeryDoggo Website---------------------------------------------------------------------------------------------------------------------------------currently in beta----------------------------------------------------------------------------</marquee>
+  
+  <div></div>
+  
   <img src="https://pics.onsizzle.com/angery-doggo-2788195.png" />
    
   <div></div>
