--- a/oh.html
+++ b/oh.html
@@ -1,7 +1,7 @@
 <html>
 <body style="background-color:#ff7300;">
   
-  <marquee behavior="scroll" direction="left">Welcome to AngeryDoggo Website                                                                                                      currently in beta 1.2.1                                                                                              Created by Jamie and Jay</marquee>
+  <marquee behavior="scroll" direction="left">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Welcome to AngeryDoggo Website░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░currently in beta 1.2.1░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Created by Jamie and Jay░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</marquee>
   
   <div></div>
   
