--- a/oh.html
+++ b/oh.html
@@ -1,6 +1,6 @@
 <html>
 <body style="background-color:#ff7300;">
-  
+  <link rel="stylesheet" href="styles.css">
   <center>_______________________________________________________________________________________________________________</center>
   <div></div>
   <marquee behavior="scroll" direction="left">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Welcome to AngeryDoggo Website░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░currently in beta 1.2.1░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Created by Jamie and Jay░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</marquee>
