--- a/oh.html
+++ b/oh.html
@@ -12,6 +12,10 @@
    
   <div></div>
   
+  <h2> Writing Wednesday 1/25/2017</h2>
+  
+  <br>
+  
   <h2>Soft Skills Project</h2>
   
   <a href="https://firelevelone.github.io/angerydoggo-project/ok.html">Communication Skills</a>
