--- a/oh.html
+++ b/oh.html
@@ -1,12 +1,14 @@
 <html>
-<body style="background-color:#ff7300;">
-  <link rel="stylesheet" href="styles.css">
-  <center>_______________________________________________________________________________________________________________</center>
-  <div></div>
+<head style="background-color:#33ffb5;">
   <marquee behavior="scroll" direction="left">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Welcome to AngeryDoggo Website░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░currently in beta 1.2.1░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Created by Jamie and Jay░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</marquee>
-  <div></div>
+   <div><div/>
+ <body style="background-color:#ff7300;">
+  <link rel="stylesheet" href="styles.css">
+   <center>_______________________________________________________________________________________________________________</center>
+    <div></div>
+  
   <center>▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔</center>
-  <div></div>
+   <div></div>
   
   <img src="https://pics.onsizzle.com/angery-doggo-2788195.png" />
    
@@ -49,6 +51,8 @@
   <p></p>
   <br>
 
+  <body/>
+  
   <strong>Beta 1.2.1</strong>
 
   <html />
