--- a/oh.html
+++ b/oh.html
@@ -1,16 +1,16 @@
-<html>
-<head style="background-color:#33ffb5;">
-  <marquee behavior="scroll" direction="left">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Welcome to AngeryDoggo Website░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░currently in beta 1.2.1░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Created by Jamie and Jay░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</marquee>
-   <div><div/>
+<html> 
  <body style="background-color:#ff7300;">
   <link rel="stylesheet" href="styles.css">
-   <center>_______________________________________________________________________________________________________________</center>
+   <header>
+    <center>_______________________________________________________________________________________________________________</center>
+     <div></div>
+  <marquee behavior="scroll" direction="left">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Welcome to AngeryDoggo Website░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░currently in beta 1.2.1░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Created by Jamie and Jay░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</marquee>
+   <div><div/>
+     <center>▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔</center>
     <div></div>
+  <header/>
   
-  <center>▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔</center>
-   <div></div>
-  
-  <img src="https://pics.onsizzle.com/angery-doggo-2788195.png" />
+     <img src="https://pics.onsizzle.com/angery-doggo-2788195.png" />
    
   <div></div>
   
