--- a/oh.html
+++ b/oh.html
@@ -1,6 +1,6 @@
 <html> 
  <body style="background-color:#ff7300;">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://firelevelone.github.io/angerydoggo-project/mmmm.css">
    <header>
     <center>_______________________________________________________________________________________________________________</center>
      <div></div>
