--- a/oh.html
+++ b/oh.html
@@ -8,7 +8,7 @@
      <center>▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔</center>
   <header/>
      <div><div/>
-  
+  <body>
      <img src="https://pics.onsizzle.com/angery-doggo-2788195.png" />
    
   <div></div>
@@ -49,10 +49,8 @@
   <br>
   <p></p>
   <br>
-
-  <body/>
   
   <strong>Beta 1.2.1</strong>
-
+<body/>
   <html />
  
