--- a/oh.html
+++ b/oh.html
@@ -49,8 +49,9 @@
   <br>
   <p></p>
   <br>
-  
-  <strong>Beta 1.2.1</strong>
-<body/>
+  <body/>
+  <footer>
+    <strong>Beta 1.2.1</strong>
+  <footer/>
   <html />
  
