--- a/oh.html
+++ b/oh.html
@@ -3,7 +3,7 @@
    <header>
     <center>_______________________________________________________________________________________________________________</center>
      <div></div>
-  <marquee behavior="scroll" direction="left">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Welcome to AngeryDoggo Website░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░currently in beta 1.2.1░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Created by Jamie and Jay░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</marquee>
+  <marquee behavior="scroll" direction="left">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Welcome to AngeryDoggo Website░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░currently in beta 1.3░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Created by Jamie and Jay░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Now with CSS!░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</marquee>
    <div><div/>
      <center>▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔</center>
   <header/>
@@ -51,7 +51,7 @@
   <br>
   <body/>
   <footer>
-    <strong>Beta 1.2.1</strong>
+    <strong>Beta 1.3</strong>
   <footer/>
   <html />
  
