--- a/oh.html
+++ b/oh.html
@@ -17,30 +17,18 @@
   
   <br>
   
-  <h2>Soft Skills Project</h2>
-  
-  <a href="https://firelevelone.github.io/angerydoggo-project/ok.html">Communication Skills</a>
-  
- <div></div> 
-  
-<a href="https://firelevelone.github.io/angerydoggo-project/attitude yeet.html">Attitude and Enthusiasm</a>
-  
-  <div></div>
-  
-  <a href="https://firelevelone.github.io/angerydoggo-project/networking.html">Networking</a>
-  
-  <div></div>
-  
-  <a href="https://firelevelone.github.io/angerydoggo-project/baby solving skills.html">Problem Solving Skills</a>
-  
-  <div></div>
-  
-  <a href="https://firelevelone.github.io/angerydoggo-project/Teamwork.html">Teamwork</a>
-  
-  <div></div>
-  
-  <a href="https://firelevelone.github.io/angerydoggo-project/Professionalism.html">Professionalism</a>
-  
+     <div class="dropdown">
+  <button class="dropbtn">Soft Skills Project</button>
+  <div class="dropdown-content">
+    <a href="https://firelevelone.github.io/angerydoggo-project/ok.html">Communication Skills</a>
+    <a href="https://firelevelone.github.io/angerydoggo-project/attitude yeet.html">Attitude and Enthusiasm</a>
+    <a href="https://firelevelone.github.io/angerydoggo-project/networking.html">Networking</a>
+    <a href="https://firelevelone.github.io/angerydoggo-project/baby solving skills.html">Problem Solving Skills</a>
+    <a href="https://firelevelone.github.io/angerydoggo-project/Teamwork.html">Teamwork</a>
+    <a href="https://firelevelone.github.io/angerydoggo-project/Professionalism.html">Professionalism</a>
+  </div>
+</div>
+ 
   <div></div>
     <br>
   <p></p>
