--- a/oh.html
+++ b/oh.html
@@ -1,11 +1,11 @@
 <html> 
   <link rel="stylesheet" href="https://firelevelone.github.io/angerydoggo-project/mmmm.css">
    <header>
-    <center>_______________________________________________________________________________________________________________</center>
+    <center>_______________________________________________________________________________________________________________________________________________________________</center>
      <div></div>
   <marquee behavior="scroll" direction="left">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Welcome to AngeryDoggo Website░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░currently in beta 1.3░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Created by Jamie and Jay░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Now with CSS!░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</marquee>
    <div><div/>
-     <center>▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔</center>
+     <center>▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔</center>
   <header/>
      <div><div/>
   <body>
