--- a/oh.html
+++ b/oh.html
@@ -17,18 +17,37 @@
   
   <br>
   
-     <div class="dropdown">
-  <button class="dropbtn">Soft Skills Project</button>
-  <div class="dropdown-content">
+  <div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+   <div id="myDropdown" class="dropdown-content">
     <a href="https://firelevelone.github.io/angerydoggo-project/ok.html">Communication Skills</a>
     <a href="https://firelevelone.github.io/angerydoggo-project/attitude yeet.html">Attitude and Enthusiasm</a>
     <a href="https://firelevelone.github.io/angerydoggo-project/networking.html">Networking</a>
     <a href="https://firelevelone.github.io/angerydoggo-project/baby solving skills.html">Problem Solving Skills</a>
     <a href="https://firelevelone.github.io/angerydoggo-project/Teamwork.html">Teamwork</a>
     <a href="https://firelevelone.github.io/angerydoggo-project/Professionalism.html">Professionalism</a>
-  </div>
-</div>
+   </div>
+ </div>
  
+<script>
+function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+}
+
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+</script>
   <div></div>
     <br>
   <p></p>
@@ -37,7 +56,8 @@
   <br>
   <p></p>
   <br>
-  <body/>
+ 
+    <body/>
   <footer>
     <strong>Beta 1.3</strong>
   <footer/>
