--- a/oh.html
+++ b/oh.html
@@ -1,15 +1,11 @@
 <html> 
   <link rel="stylesheet" href="https://firelevelone.github.io/angerydoggo-project/mmmm.css">
    <header>
-    <center>_________________________________________________________________________________________________________________________________________________________________________________</center>
-     <div></div>
-  <marquee behavior="scroll" direction="left">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Welcome to AngeryDoggo Website░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░currently in beta 1.3░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Created by Jamie and Jay░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Now with CSS!░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</marquee>
-   <div><div/>
-     <center>▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔</center>
+    
   <header/>
      <div><div/>
   <body>
-     <img src="https://pics.onsizzle.com/angery-doggo-2788195.png" />
+     
    
   <div></div>
   
@@ -49,28 +45,15 @@ window.onclick = function(event) {
 }
 </script>
   <div></div>
-    <br>
-  <p></p>
-  <br>
-  <p></p>
-  <br>
-  <p></p>
-  <br>
-    <br>
-  <p></p>
-  <br>
-  <p></p>
-  <br>
-  <p></p><br>
-  <p></p>
-  <br>
-  <p></p>
-  <br>
-  <p></p><br>
-  <p></p>
-  <br>
-  <p></p>
-  <br>
+    <center>___________________________________________________________________________________________________________________________________________________________________________</center>
+     <div></div>
+  <marquee behavior="scroll" direction="left">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Welcome to AngeryDoggo Website░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░currently in beta 1.4░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Created by Jamie and Jay░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Now with Dropdowns!░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</marquee>
+   <div><div/>
+     <center>▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔</center>
+  <div><div/>
+    <img src="https://pics.onsizzle.com/angery-doggo-2788195.png" />
+    <div><div/>
+     <br>
   <p></p><br>
   <p></p>
   <br>
@@ -80,7 +63,7 @@ window.onclick = function(event) {
  
     <body/>
   <footer>
-    <strong>Beta 1.3</strong>
+    <center><strong>Beta 1.4</strong><center/>
   <footer/>
   <html />
  
