--- a/oh.html
+++ b/oh.html
@@ -3,20 +3,12 @@
    <header>
     <center>___________________________________________________________________________________________________________________________________________________________________________</center>
      <div></div>
-  <marquee behavior="scroll" direction="left">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Welcome to AngeryDoggo Website░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░currently in beta 1.4░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Created by Jamie and Jay░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Now with Dropdowns!░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</marquee>
+  <marquee behavior="scroll" direction="left">░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Welcome to AngeryDoggo Website░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░currently in beta 1.5░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Created by Jamie and Jay░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░Now with Dropdowns!░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</marquee>
    <div><div/>
      <center>▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔</center>
   <header/>
      <div><div/>
-  <body>
-     
-   
-  <div></div>
-  
-  <h2> Writing Wednesday 1/25/2017</h2>
-  
-  <br>
-  
+  <body> 
   <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Soft Skills Project</button>
    <div id="myDropdown" class="dropdown-content">
@@ -49,10 +41,11 @@ window.onclick = function(event) {
 }
 </script>   
   <div><div/>
-    <img src="https://pics.onsizzle.com/angery-doggo-2788195.png" />
+    <center><img src="https://pics.onsizzle.com/angery-doggo-2788195.png" /><center>
     <div><div/>
      <br>
-  <p></p><br>
+  <p></p>
+  <br>
   <p></p>
   <br>
   <p></p>
@@ -61,7 +54,7 @@ window.onclick = function(event) {
  
     <body/>
   <footer>
-    <center><strong>Beta 1.4</strong><center/>
+    <center><strong>Beta 1.5</strong><center/>
   <footer/>
   <html />
  
