--- a/oh.html
+++ b/oh.html
@@ -9,6 +9,7 @@
   <header/>
      <div><div/>
   <body> 
+  <center>
   <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Soft Skills Project</button>
    <div id="myDropdown" class="dropdown-content">
@@ -51,7 +52,8 @@ window.onclick = function(event) {
   }
 }
 </script>   
-  <div><div/>
+<center/>
+   <div><div/>
     <center><img src="https://pics.onsizzle.com/angery-doggo-2788195.png" /><center>
     <div><div/>
      <br>
