--- a/oh.html
+++ b/oh.html
@@ -23,7 +23,7 @@
  </div>
  <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Test</button>
-   <div id="myDropdown" class="dropdown-content">
+   <div id="OtherSites" class="dropdown-content">
     <a href="https://firelevelone.github.io/angerydoggo-project/ok.html">Communication Skills</a>
     <a href="https://firelevelone.github.io/angerydoggo-project/attitude yeet.html">Attitude and Enthusiasm</a>
     <a href="https://firelevelone.github.io/angerydoggo-project/networking.html">Networking</a>
@@ -51,7 +51,26 @@ window.onclick = function(event) {
     }
   }
 }
-</script>   
+</script> 
+<script>
+function myFunction() {
+    document.getElementById("OtherSites").classList.toggle("show");
+}
+
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+</script>
 <center/>
    <div><div/>
     <center><img src="https://pics.onsizzle.com/angery-doggo-2788195.png" /><center>
