--- a/oh.html
+++ b/oh.html
@@ -52,6 +52,7 @@ window.onclick = function(event) {
   }
 }
 </script> 
+<div>
 <script>
 function myFunction() {
     document.getElementById("OtherSites").classList.toggle("show");
@@ -71,6 +72,7 @@ window.onclick = function(event) {
   }
 }
 </script>
+<div/>
 <center/>
    <div><div/>
     <center><img src="https://pics.onsizzle.com/angery-doggo-2788195.png" /><center>
