--- a/oh.html
+++ b/oh.html
@@ -105,7 +105,7 @@ window.onclick = function(event) {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>
       $(document).ready(function(){
-        $('.main-nav > li').click(function)() {
+        $('.main-nav > li').click(function() {
           $('.main-nav > li').not(this).find('ul').hide();
           $(this).find('ul').toggle();
         });
