--- a/oh.html
+++ b/oh.html
@@ -115,5 +115,6 @@ window.onclick = function(event) {
   <footer>
     <center><strong>Beta 1.5</strong><center/>
   <footer/>
-  <html />
+  <p>-g>`~blK9HAHCI~p@<p/>
+      <html/>
  
