--- a/ok.html
+++ b/ok.html
@@ -17,19 +17,19 @@
   <body> 
   <center>  
     <ul class="main-nav">
-      <li>Soft Skills Project
+     <li>Soft Skills Project</li>
         <ul class="dropdown">
           <li>Communication Skills</li>
         </ul>
       </li>
-     <ul>
+     <ul class="main-nav">
       <li>Test
-        <ul>
+        <ul class="dropdown">
           <li>Test</li>
         </ul>
       </li>
     </ul>
- <div><div/>
+   <br>
     <center><img src="https://pics.onsizzle.com/angery-doggo-2788195.png" /><center>
      <br>
   <p></p>
