Update and rename ok.html to oh.html

--- a/oh.html
+++ b/oh.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
  <html> 
    <head>
-    <link rel="stylesheet" href="https://firelevelone.github.io/angerydoggo-project/mmmm.css">
+    <link href="https://firelevelone.github.io/angerydoggo-project/mmmm.css" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=vt323" rel="stylesheet">
    </head>
     <div class="heading">
      <header>
