--- a/oh.html
+++ b/oh.html
@@ -16,21 +16,25 @@
      <header/>
     </div>
   <body> 
-  <center>  
+   <div class="dropdowns">
+   <left>  
     <ul class="main-nav">
      <li>Soft Skills Project</li>
         <ul class="dropdown">
           <li>Communication Skills</li>
         </ul>
       </li>
-     <ul class="main-nav">
+    </left>
+    <right>
+    <ul class="main-nav">
       <li>Test
         <ul class="dropdown">
           <li>Test</li>
         </ul>
       </li>
     </ul>
-   <br>
+    </right> 
+    </div>
     <center><img src="https://pics.onsizzle.com/angery-doggo-2788195.png" /><center>
      <br>
   <p></p>
