--- a/oh.html
+++ b/oh.html
@@ -19,11 +19,12 @@
    <div class="dropdowns">
    <left>  
     <ul class="main-nav">
-     <li>Soft Skills Project</li>
+     <li>beme</li>
         <ul class="dropdown">
-          <li>Communication Skills</li>
+          <li>lol</li>
         </ul>
       </li>
+     </ul>
     </left>
     <right>
     <ul class="main-nav">
