--- a/oh.html
+++ b/oh.html
@@ -2,7 +2,7 @@
  <html> 
    <head>
     <link href="https://firelevelone.github.io/angerydoggo-project/mmmm.css" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=vt323" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=VT323" rel="stylesheet">
    </head>
     <div class="heading">
      <header>
