--- a/oh.html
+++ b/oh.html
@@ -56,7 +56,7 @@
     </script>
   </body>
   <footer>
-    <center><strong>Beta 1.5.5</strong><center/>
+    <center><strong>Beta 1.whatever</strong><center/>
   <footer/>
       <html/>
  
