--- a/Market Revolution US History/index.html
+++ b/Market Revolution US History/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<title>Market Revolution</title>
+    <title>Market Revolution</title>
+    <link rel="stylesheet" href="https://firelevelone.github.io/beanheadlarry/stuff.css"> 
 <h1>Market Revolution</h1>
 <p>
 <br>
