--- a/Market Revolution US History/index.html
+++ b/Market Revolution US History/index.html
@@ -3,10 +3,11 @@
     <title>Market Revolution</title>
     <link rel="stylesheet" href="https://firelevelone.github.io/beanheadlarry/stuff.css"> 
 <h1>Market Revolution</h1>
+<p>A revolution where people were switching from making everything by hand and living off the land into working for money and exchanging that for things they cant make.</p>
 <p>
 <br>
 <br>
 <br>
 <br>
 </p>
-<h3>Market Revolution</h3>
+<h3>Free Enterprise</h3>
