--- a/oh.html
+++ b/oh.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html>
    <head>
-    <link href="https://firelevelone.github.io/angerydoggo-project/mmmm.css" rel="stylesheet">
+    <link href="mmmm.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=VT323" rel="stylesheet">
    </head>
    <body>
